--- a/package.json
+++ b/package.json
@@ -16,5 +16,15 @@
   "bugs": {
     "url": "https://github.com/kdher/Tech-Blog/issues"
   },
-  "homepage": "https://github.com/kdher/Tech-Blog#readme"
+  "homepage": "https://github.com/kdher/Tech-Blog#readme",
+  "dependencies": {
+    "bcrypt": "^5.0.1",
+    "connect-session-sequelize": "^7.1.3",
+    "dotenv": "^16.0.0",
+    "express": "^4.18.0",
+    "express-handlebars": "^6.0.5",
+    "express-session": "^1.17.2",
+    "mysql2": "^2.3.3",
+    "sequelize": "^6.19.0"
+  }
 }
